<resources>
    <string name="app_name">UbiQ</string>
    <string name="title_activity_maps">UbiQ</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="start_updates_button">Start</string>
    <string name="stop_updates_button">Stop</string>
    <string name="last_update_time_label">Last location update time</string>
    
    <string name="start_updates">Start</string>
    <string name="stop_updates">Stop</string>
    
    <string name="location_settings_inadequate_warning">The location settings on the device are not adequate to run this sample. Fix in Settings.</string>
    
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="button">Center Screen</string>
    <string name="center_screen">center screen</string>
    <string name="clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="_1s">1s</string>
    <string name="_3s">3s</string>
    <string name="_5s">5s</string>
    <string name="rate">Rate</string>
    <string name="polylines">Polylines</string>
    <string name="visibility">Visibility</string>
    <string name="kalman">Kalman</string>
    <string name="gps">GPS</string>
    <string name="noisy">Noisy</string>
</resources>
